--- a/RegexExplorer/Storyboards/Base.lproj/Main.storyboard
+++ b/RegexExplorer/Storyboards/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Application-->
+        <!--Regex Application-->
         <scene sceneID="JPo-4y-FX3">
             <objects>
-                <application id="hnw-xV-0zn" sceneMemberID="viewController">
+                <application id="hnw-xV-0zn" customClass="regexApplication" customModule="RegexExplorer" customModuleProvider="target" sceneMemberID="viewController">
                     <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                         <items>
                             <menuItem title="RegexExplorer" id="1Xt-HY-uBw">
