--- a/RegexExplorer/Storyboards/Groups.storyboard
+++ b/RegexExplorer/Storyboards/Groups.storyboard
@@ -5,10 +5,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Groups View Controller-->
         <scene sceneID="GRp-Kc-lJR">
             <objects>
-                <viewController id="9w1-a4-fbt" sceneMemberID="viewController">
+                <viewController id="9w1-a4-fbt" customClass="groupsViewController" customModule="RegexExplorer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="cQh-Fr-4Sy">
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
