--- a/RegexExplorer/Storyboards/Sample.storyboard
+++ b/RegexExplorer/Storyboards/Sample.storyboard
@@ -5,10 +5,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Sample View Controller-->
         <scene sceneID="8OJ-8x-zfJ">
             <objects>
-                <viewController id="2Jh-w9-rD0" sceneMemberID="viewController">
+                <viewController id="2Jh-w9-rD0" customClass="sampleViewController" customModule="RegexExplorer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="ZXb-S6-DH8">
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
