--- a/RegexExplorer/Storyboards/Pattern.storyboard
+++ b/RegexExplorer/Storyboards/Pattern.storyboard
@@ -8,7 +8,7 @@
         <!--PatternViewController-->
         <scene sceneID="bjQ-2E-grN">
             <objects>
-                <viewController title="PatternViewController" id="FBf-cr-bZ6" customClass="patternViewController" customModule="RegexExplorer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="PatternViewController" id="FBf-cr-bZ6" customClass="PatternViewController" customModule="RegexExplorer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="I2Y-Cr-HO8">
                         <rect key="frame" x="0.0" y="0.0" width="450" height="108"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -25,7 +25,7 @@
                                 <rect key="frame" x="20" y="20" width="410" height="44"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="j1g-tO-g45">
                                     <rect key="frame" x="0.0" y="0.0" width="410" height="44"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <textView importsGraphics="NO" verticallyResizable="YES" continuousSpellChecking="YES" spellingCorrection="YES" smartInsertDelete="YES" id="df4-Uy-ruS" customClass="patternTextView" customModule="RegexExplorer" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="410" height="44"/>
