--- a/RegexExplorer/Storyboards/Sample.storyboard
+++ b/RegexExplorer/Storyboards/Sample.storyboard
@@ -8,7 +8,7 @@
         <!--SampleViewController-->
         <scene sceneID="8OJ-8x-zfJ">
             <objects>
-                <viewController title="SampleViewController" id="2Jh-w9-rD0" customClass="sampleViewController" customModule="RegexExplorer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="SampleViewController" id="2Jh-w9-rD0" customClass="SampleViewController" customModule="RegexExplorer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="ZXb-S6-DH8">
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -25,7 +25,7 @@
                                 <rect key="frame" x="20" y="20" width="410" height="236"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="c9i-bt-V3M">
                                     <rect key="frame" x="0.0" y="0.0" width="410" height="236"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="ii1-WD-6jP">
                                             <rect key="frame" x="0.0" y="0.0" width="410" height="236"/>
