--- a/RegexExplorer/Storyboards/Groups.storyboard
+++ b/RegexExplorer/Storyboards/Groups.storyboard
@@ -10,119 +10,43 @@
             <objects>
                 <viewController title="GroupsViewController" id="9w1-a4-fbt" customClass="GroupsViewController" customModule="RegexExplorer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="cQh-Fr-4Sy">
-                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="86"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cVH-fq-Zhy">
-                                <rect key="frame" x="18" y="264" width="49" height="16"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="Groups" id="7IU-xH-3Hl">
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="HIR-wI-jQh">
+                                <rect key="frame" x="12" y="50" width="49" height="16"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Groups" id="28X-2x-drz">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hGc-q8-kCa">
-                                <rect key="frame" x="20" y="20" width="410" height="236"/>
-                                <clipView key="contentView" drawsBackground="NO" id="7y7-x9-7SQ">
-                                    <rect key="frame" x="1" y="1" width="408" height="234"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" indentationPerLevel="16" outlineTableColumn="7SN-4K-yX5" id="v4i-Tv-cFj">
-                                            <rect key="frame" x="0.0" y="0.0" width="408" height="234"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            <size key="intercellSpacing" width="3" height="2"/>
-                                            <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
-                                            <tableColumns>
-                                                <tableColumn width="405" minWidth="16" maxWidth="1000" id="7SN-4K-yX5">
-                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
-                                                        <font key="font" metaFont="message" size="11"/>
-                                                        <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
-                                                        <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
-                                                    </tableHeaderCell>
-                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" title="Text Cell" id="ce2-D5-faI">
-                                                        <font key="font" metaFont="system"/>
-                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                    </textFieldCell>
-                                                    <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
-                                                    <prototypeCellViews>
-                                                        <tableCellView identifier="HeaderCell" id="bUl-bX-iet">
-                                                            <rect key="frame" x="1" y="1" width="405" height="17"/>
-                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                            <subviews>
-                                                                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="caR-5z-aTN">
-                                                                    <rect key="frame" x="0.0" y="1" width="405" height="14"/>
-                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Groups" id="fGx-aO-dvG">
-                                                                        <font key="font" metaFont="smallSystemBold"/>
-                                                                        <color key="textColor" name="headerColor" catalog="System" colorSpace="catalog"/>
-                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                                                    </textFieldCell>
-                                                                </textField>
-                                                            </subviews>
-                                                            <connections>
-                                                                <outlet property="textField" destination="caR-5z-aTN" id="Ef8-Ze-AzW"/>
-                                                            </connections>
-                                                        </tableCellView>
-                                                        <tableCellView identifier="DataCell" id="yLh-zs-Rmr">
-                                                            <rect key="frame" x="1" y="20" width="405" height="17"/>
-                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                            <subviews>
-                                                                <imageView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Ol-Z5-6VB">
-                                                                    <rect key="frame" x="3" y="0.0" width="17" height="17"/>
-                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                                    <imageCell key="cell" refusesFirstResponder="YES" imageScaling="proportionallyDown" image="NSActionTemplate" id="Zae-P8-U4n"/>
-                                                                </imageView>
-                                                                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NNL-gn-8XD">
-                                                                    <rect key="frame" x="25" y="0.0" width="380" height="17"/>
-                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="MUY-Ij-T9O">
-                                                                        <font key="font" metaFont="system"/>
-                                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                                                    </textFieldCell>
-                                                                </textField>
-                                                            </subviews>
-                                                            <connections>
-                                                                <outlet property="imageView" destination="0Ol-Z5-6VB" id="aSz-It-wju"/>
-                                                                <outlet property="textField" destination="NNL-gn-8XD" id="cj4-mA-IFB"/>
-                                                            </connections>
-                                                        </tableCellView>
-                                                    </prototypeCellViews>
-                                                </tableColumn>
-                                            </tableColumns>
-                                        </outlineView>
-                                    </subviews>
-                                    <nil key="backgroundColor"/>
-                                </clipView>
-                                <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="slx-Bc-Fhl">
-                                    <rect key="frame" x="1" y="119" width="238" height="15"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </scroller>
-                                <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="8sO-WX-Q3Z">
-                                    <rect key="frame" x="224" y="17" width="15" height="102"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </scroller>
-                            </scrollView>
+                            <comboBox verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="U0Y-uL-vGM">
+                                <rect key="frame" x="15" y="16" width="412" height="25"/>
+                                <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" completes="NO" numberOfVisibleItems="5" id="0hP-EL-bgg">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </comboBoxCell>
+                            </comboBox>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="hGc-q8-kCa" firstAttribute="leading" secondItem="cQh-Fr-4Sy" secondAttribute="leading" constant="20" id="Elg-Ji-2Sg"/>
-                            <constraint firstItem="hGc-q8-kCa" firstAttribute="top" secondItem="cVH-fq-Zhy" secondAttribute="bottom" constant="8" id="Ga7-Sg-7jl"/>
-                            <constraint firstItem="cVH-fq-Zhy" firstAttribute="leading" secondItem="cQh-Fr-4Sy" secondAttribute="leading" constant="20" id="IGT-rx-NJg"/>
-                            <constraint firstItem="cVH-fq-Zhy" firstAttribute="top" secondItem="cQh-Fr-4Sy" secondAttribute="top" constant="20" id="Jwo-Lp-LF1"/>
-                            <constraint firstAttribute="trailing" secondItem="hGc-q8-kCa" secondAttribute="trailing" constant="20" id="VbW-Gw-DGs"/>
-                            <constraint firstAttribute="bottom" secondItem="hGc-q8-kCa" secondAttribute="bottom" constant="20" id="qRD-Tf-0Ub"/>
-                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="cVH-fq-Zhy" secondAttribute="trailing" constant="385" id="u7Y-Px-JrG"/>
+                            <constraint firstItem="HIR-wI-jQh" firstAttribute="top" secondItem="cQh-Fr-4Sy" secondAttribute="top" constant="20" id="5Qb-ZS-Ia5"/>
+                            <constraint firstItem="HIR-wI-jQh" firstAttribute="leading" secondItem="cQh-Fr-4Sy" secondAttribute="leading" constant="14" id="6ou-xe-hxc"/>
+                            <constraint firstItem="U0Y-uL-vGM" firstAttribute="leading" secondItem="cQh-Fr-4Sy" secondAttribute="leading" constant="15" id="7QL-2R-SWG"/>
+                            <constraint firstAttribute="bottom" secondItem="U0Y-uL-vGM" secondAttribute="bottom" constant="20" id="ELw-1y-JmV"/>
+                            <constraint firstAttribute="trailing" secondItem="U0Y-uL-vGM" secondAttribute="trailing" constant="26" id="cwX-dZ-SaX"/>
+                            <constraint firstItem="U0Y-uL-vGM" firstAttribute="top" secondItem="HIR-wI-jQh" secondAttribute="bottom" constant="11" id="pgH-tL-mx2"/>
+                            <constraint firstAttribute="trailing" secondItem="HIR-wI-jQh" secondAttribute="trailing" constant="391" id="qui-FR-HoY"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="groupsComboBox" destination="U0Y-uL-vGM" id="S1n-9f-wLd"/>
+                    </connections>
                 </viewController>
                 <customObject id="ePe-El-CJF" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-195" y="-38"/>
+            <point key="canvasLocation" x="-195" y="-145"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="NSActionTemplate" width="14" height="14"/>
-    </resources>
 </document>
