--- a/RegexExplorer/Storyboards/Pattern.storyboard
+++ b/RegexExplorer/Storyboards/Pattern.storyboard
@@ -25,7 +25,7 @@
                                 <rect key="frame" x="20" y="20" width="410" height="44"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="j1g-tO-g45">
                                     <rect key="frame" x="0.0" y="0.0" width="410" height="44"/>
-                                    <autoresizingMask key="autoresizingMask"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <textView importsGraphics="NO" verticallyResizable="YES" continuousSpellChecking="YES" spellingCorrection="YES" smartInsertDelete="YES" id="df4-Uy-ruS" customClass="patternTextView" customModule="RegexExplorer" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="410" height="44"/>
