GroupsViewController is now passing the groups array back to samples for it to display the groups visually on the sample text visually.

--- a/RegexExplorer/Storyboards/Sample.storyboard
+++ b/RegexExplorer/Storyboards/Sample.storyboard
@@ -27,7 +27,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="410" height="236"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="ii1-WD-6jP">
+                                        <textView importsGraphics="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="ii1-WD-6jP">
                                             <rect key="frame" x="0.0" y="0.0" width="410" height="236"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
